Env config added for notifications service, parser tests added, ui added